--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "currency",
   "version": "0.0.1",
+   "scripts": {
+    "start": "node ./bin/www"
+},
   "dependencies": {
     "express": "~4.14.1",
     "express-handlebars": "~3.0.0",
